# FastAPI

./: .gitignore  Makefile  README.md  data.py  environment.yml  log.py  main.py  path.py  pyproject.toml
Week-1/: .gitignore  README.md  data.py  environment.yml
Week-1/data/cleaned/: cleaned.xlsx
Week-1/data/raw/: Assignment1.xlsx
Week-1/frontend/: index.js
Week-1/sql/: python_connect_sql.py
Week-2/Classification/: Makefile  pyproject.toml
Week-2/Classification/featurePipeline/feature_repo/: example_repo.py  feature_store.yaml
Week-2/Classification/featurePipeline/feature_repo/data/: driver_stats.parquet
Week-2/Classification/notebooks/: data_exploration.ipynb
Week-2/Classification/saved/model/: decision_tree.pkl  lgb.pkl  logistic_regression.pkl
Week-2/Classification/src/: __init__.py  app.py  load_data.py  load_model.py  path.py  predict.py  save_to_mongodb.py
data/cleaned/: cleaned.xlsx
frontend/: index.html
notebook/: data_cleaning.ipynb
sql/: main.sql  myconnection.py  python_connect_sql.py
