[tool.poetry]
name = "assignment-1"
version = "0.1.0"
description = ""
authors = ["Sugam Sharma"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}
loguru = "^0.7.3"
openpyxl = "^3.1.5"
cache-pandas = "^1.0.0"
pydantic = "^2.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
